@@ -31,7 +31,6 @@ packages =
     stsci.distutils.command
 
 [global]
-setup-hooks = stsci.distutils.hooks.version_setup_hook
-
-[egg_info]
-tag_svn_revision = True
+setup-hooks =
+    stsci.distutils.hooks.tag_svn_revision
+    stsci.distutils.hooks.version_setup_hook
